--- a/design/css/corporate.css
+++ b/design/css/corporate.css
@@ -11,6 +11,7 @@ html{
 body{
   margin-top: 70px;
   height: 100%;
+  background-color: #f5f5f5;
 }
 
 /*---------------------------Header CSS------------------------------*/
@@ -84,7 +85,7 @@ span.search-btn > i{
 .left-panel{
     padding-top: 40px;
     padding-left: 24px;
-    padding-right: 24px;  
+    padding-right: 24px;
 }
 .sticky{
     position: sticky;
@@ -170,7 +171,7 @@ span.search-btn > i{
 .heading-text h5{
     color: #02715b;
     font-weight: 600;
-    font-size: 16px;  
+    font-size: 16px;
 }
 button.btn-message{
   background-color: #fe5e39;
@@ -203,7 +204,7 @@ ul.flat-tabs > li.active > a{
     background: transparent !important;
     border: none !important;
     color: #023436 !important;
-} 
+}
 .info-sections{
   padding: 34px 38px 0;
 }
@@ -432,11 +433,104 @@ table.table-timeline caption{
     display: inline-block;
     vertical-align: middle;
 }
+.white-drop {
+    text-align: center;
+    background: #fff;
+    color: #000;
+    border: 1px solid #ccc;
+    box-shadow: none;
+    border-radius: 2px;
+}
+.search-result-header{
+  margin-bottom: 40px;
+}
+.search-result-header h4{
+  color: #023436;
+  display: inline-block;
+  margin: 0;
+  margin-bottom: 8px;
+}
+.search-result-header strong{
+  color: #fe5e39;
+}
+.profile-listing ul{
+  padding-left: 0;
+}
+.profile-listing ul li.profile-result{
+  background-color: #fff;
+  padding: 18px 24px;
+  border-top: 1px solid #e0e0e0;
+}
+.profile-listing ul li.profile-result a{
+  text-decoration: none;
+}
+a:active {
+    outline: none!important;
+}
+.profile-listing ul li.profile-result:hover{
+  background-color: #f7f8fa;
+}
+.profile-listing ul li.profile-result div.result-pic{
+  height: 130px;
+  width: 130px;
+  background-position: center;
+  background-size: cover;
+  display: inline-block;
+}
 
+.hours-training{
+    text-align: center;
+}
+.hours-training h5{
+      color: #999;
+    font-weight: 700;
+    margin-top: 0;
+    margin-bottom: 4px;
+    font-size: 14px;
+}
+.hours-training h4{
+  color: #023436;
+  font-weight: 700;
+}
+
+.absolute-ratings i{
+  font-size: 28px !important;
+}
+.table-borderless-border, .table-borderless-border tr td {
+  border: none !important;
+  margin-bottom: 0;
+}
+.table-borderless-border td{
+  table-layout: fixed;
+}
+.table-skills h5{
+      color: #999;
+    font-weight: 700;
+    margin-top: 0;
+    margin-bottom: 6px;
+    font-size: 14px;
+}
+.table-skills .table-skill-listing{
+  font-size: 14px;
+  color: #00a886;
+}
+.name-section{
+  margin-bottom: 0;
+}
+ul.corp-pagination >.active>a, ul.corp-pagination>.active>a:focus, ul.corp-pagination>.active>a:hover, ul.corp-pagination>.active>span, ul.corp-pagination>.active>span:focus, ul.corp-pagination>.active>span:hover{
+  background-color: #00a886;
+  border-color: #00a886;
+}
+ul.corp-pagination li a{
+  color: #303030;
+}
+ul.corp-pagination>li:first-child>a, ul.corp-pagination>li:first-child>span, ul.corp-pagination>li:last-child>a, ul.corp-pagination>li:last-child>span{
+  border-radius: 0;
+}
 /*---------Media Queries-----------*/
-@media only screen 
-and (min-device-width : 768px) 
-and (max-device-width : 1024px) 
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px)
 and (orientation : portrait) {
   .sticky{
     position: static;
@@ -447,9 +541,9 @@ and (orientation : portrait) {
   }
 }
 
-@media only screen 
-and (min-device-width : 768px) 
-and (max-device-width : 1024px) 
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px)
 and (orientation : landscape) {
   .company-logo{
     background-size: contain;
@@ -457,9 +551,9 @@ and (orientation : landscape) {
   }
 }
 
-@media only screen 
-and (min-device-width : 320px) 
-and (max-device-width : 667px) { 
+@media only screen
+and (min-device-width : 320px)
+and (max-device-width : 667px) {
   .sticky{
     position: static;
     height: auto;
