--- a/trainer/static/trainer/css/corporate.css
+++ b/trainer/static/trainer/css/corporate.css
@@ -11,6 +11,7 @@ html{
 body{
   margin-top: 70px;
   height: 100%;
+  background-color: #f5f5f5;
 }
 
 /*---------------------------Header CSS------------------------------*/
@@ -432,7 +433,100 @@ table.table-timeline caption{
     display: inline-block;
     vertical-align: middle;
 }
+.white-drop {
+    text-align: center;
+    background: #fff;
+    color: #000;
+    border: 1px solid #ccc;
+    box-shadow: none;
+    border-radius: 2px;
+}
+.search-result-header{
+  margin-bottom: 40px;
+}
+.search-result-header h4{
+  color: #023436;
+  display: inline-block;
+  margin: 0; 
+  margin-bottom: 8px;
+}
+.search-result-header strong{
+  color: #fe5e39;
+}
+.profile-listing ul{
+  padding-left: 0;
+}
+.profile-listing ul li.profile-result{
+  background-color: #fff;
+  padding: 18px 24px;
+  border-top: 1px solid #e0e0e0;
+}
+.profile-listing ul li.profile-result a{
+  text-decoration: none;
+}
+a:active {
+    outline: none!important;
+}
+.profile-listing ul li.profile-result:hover{
+  background-color: #f7f8fa;
+}
+.profile-listing ul li.profile-result div.result-pic{
+  height: 130px;
+  width: 130px;
+  background-position: center;
+  background-size: cover;
+  display: inline-block;
+}
 
+.hours-training{
+    text-align: center;
+}
+.hours-training h5{
+      color: #999;
+    font-weight: 700;
+    margin-top: 0;
+    margin-bottom: 4px;
+    font-size: 14px;
+}
+.hours-training h4{
+  color: #023436;
+  font-weight: 700;
+}
+
+.absolute-ratings i{
+  font-size: 28px !important;
+}
+.table-borderless-border, .table-borderless-border tr td {
+  border: none !important;
+  margin-bottom: 0;
+}
+.table-borderless-border td{
+  table-layout: fixed;
+}
+.table-skills h5{
+      color: #999;
+    font-weight: 700;
+    margin-top: 0;
+    margin-bottom: 6px;
+    font-size: 14px;
+}
+.table-skills .table-skill-listing{
+  font-size: 14px;
+  color: #00a886;
+}
+.name-section{
+  margin-bottom: 0;
+}
+ul.corp-pagination >.active>a, ul.corp-pagination>.active>a:focus, ul.corp-pagination>.active>a:hover, ul.corp-pagination>.active>span, ul.corp-pagination>.active>span:focus, ul.corp-pagination>.active>span:hover{
+  background-color: #00a886;
+  border-color: #00a886;
+}
+ul.corp-pagination li a{
+  color: #303030;
+}
+ul.corp-pagination>li:first-child>a, ul.corp-pagination>li:first-child>span, ul.corp-pagination>li:last-child>a, ul.corp-pagination>li:last-child>span{
+  border-radius: 0;
+}
 /*---------Media Queries-----------*/
 @media only screen 
 and (min-device-width : 768px) 
