--- a/trainer/templates/trainer/index.html
+++ b/trainer/templates/trainer/index.html
@@ -1,15 +1,13 @@
 {% extends 'trainer/base.html' %}
 
 {% block body %}
-    <ul>
-        {% for profile in object_list %}
-            <li>
-                <a href="{% url 'trainer:detail' profile.id %}">
-                    {{profile.first_name}} {{profile.last_name}}
-                </a>
-            </li>
-        {% endfor %}
-    </ul>
+<h1>Home</h1>
+<form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Submit</button>
+</form>
+<h2>{{search}}</h2>
 {% endblock %}
 
 
