--- a/trainer/templates/trainer/navbar.html
+++ b/trainer/templates/trainer/navbar.html
@@ -17,7 +17,6 @@
         <li>
 			<div class="form-group">
                 <form method="post">
-                    {% csrf_token %}
                     <input type="text" name="" placeholder="Search" class="form-control searchbox">
                     <span class="search-btn"><i class="icon-search"></i></span>
                 </form>
@@ -26,9 +25,7 @@
         <li><a href="#"><span class="icon-notifications"><div class="badge">5</div></span></a></li>
         <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-        	<div class="user-pic"
-                 style="background: url('/static/trainer/img/user.jpg')
-          center no-repeat;"></div>
+        	<div class="user-pic" style="background: url('/static/trainer/img/user.jpg') center no-repeat;"></div>
         </a>
         <ul class="dropdown-menu">
           <li><a href="#">Profile</a></li>
