--- a/trainer/templates/trainer/script.html
+++ b/trainer/templates/trainer/script.html
@@ -2,3 +2,10 @@
 
 <script src="{% static 'trainer/js/jquery-3.3.1.min.js' %}"></script>
 <script src="{% static 'trainer/js/bootstrap.min.js' %}"></script>
+<script type="text/javascript">
+		$(document).ready(function(){
+		    $('.dropdown-menu a').click(function(){
+		    $('#selected').text($(this).text());
+		  });
+		});
+</script>
