--- a/trainer/static/trainer/css/corporate.css
+++ b/trainer/static/trainer/css/corporate.css
@@ -2,8 +2,12 @@
   font-family: corptrainer;
   src: url(../fonts/corptrainer.ttf);
 }
+@font-face{
+  font-family: gotham;
+  src: url(../fonts/GothamBook.ttf);
+}
 *{
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'gotham', sans-serif;
 }
 html{
   height: 100%;
@@ -12,6 +16,18 @@ body{
   margin-top: 70px;
   height: 100%;
   background-color: #f5f5f5;
+}
+body.sign-up-body{
+  height: auto;
+}
+.navbar-right li.login-li {
+    line-height: 64px;
+    padding-left: 15px;
+    color: #fff;
+}
+.navbar-right li.login-li .linked a{
+  color: #023436 !important;
+  font-weight: 600;
 }
 
 /*---------------------------Header CSS------------------------------*/
@@ -178,6 +194,12 @@ button.btn-message{
     color: #fff;
     border-radius: 0;
     padding: 9px 14px;
+    transition: 0.4s;
+}
+button.btn-message:hover, button.btn-message:focus, button.btn-message:active{
+  color: #fff;
+  background-color: rgb(254, 94, 57);
+  box-shadow: 0px 0px 9.5px 0.5px rgba(0, 0, 0, 0.1);
 }
 ul.flat-tabs{
   border-bottom: 2px solid #e0e0e0;
@@ -527,6 +549,69 @@ ul.corp-pagination li a{
 ul.corp-pagination>li:first-child>a, ul.corp-pagination>li:first-child>span, ul.corp-pagination>li:last-child>a, ul.corp-pagination>li:last-child>span{
   border-radius: 0;
 }
+.footer{
+    background-color: #023436;
+    color: #fff;
+    padding: 18px 0;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+.sign-up-container{
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0px 0px 4.9px 0.1px rgba(0, 0, 0, 0.1);
+  padding: 32px;
+}
+.sign-up-container h3{
+  color: #023436;
+  font-weight: 600;
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 28px;
+}
+input.flat-control{
+    border: 1px solid rgb(224, 224, 224);
+    background-color: rgb(255, 255, 255);
+    border-radius: 0;
+    height: 42px;
+    padding-left: 40px;
+    font-family: 'Open Sans', sans-serif;
+}
+input.flat-control:focus {
+    border-color: #00a886;
+    -webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.3);
+    box-shadow: inset 0 0 5px rgba(0,0,0,0.3);
+    border-width: 1px;
+    outline: 0;
+    transition: 0.4s;
+}
+.icon-group-user, .icon-group-email{
+  position: relative;
+  margin-bottom: 24px;
+}
+.icon-group-user:before{
+    content: "u";
+    position: absolute;
+    left: 14px;
+    font-size: 22px;
+    top: 50%;
+    color: #00a886;
+    margin-top: -11px;
+}
+.icon-group-email:before{
+    content: "m";
+    position: absolute;
+    left: 14px;
+    font-size: 20px;
+    top: 50%;
+    color: #00a886;
+    margin-top: -10px;
+}
+.m-t-lg{
+  margin-top: 10px;
+}
+
 /*---------Media Queries-----------*/
 @media only screen 
 and (min-device-width : 768px) 
