Search functionality added

--- a/trainer/templates/trainer/sign_up.html
+++ b/trainer/templates/trainer/sign_up.html
@@ -36,6 +36,7 @@
               <div class="col-sm-12">
                 <div class="form-group icon-group-password">
                   {{form.visible_fields.2}}
+                  {{form.password.errors}}
                 </div>
               </div>
             </div>
