--- a/trainer/templates/trainer/user_listing.html
+++ b/trainer/templates/trainer/user_listing.html
@@ -5,7 +5,7 @@
 <div class="container">
   <div class="middle-section">
   <div class="search-result-header">
-  	<h4>Showing 45 results for <strong>UX Design</strong></h4>
+  	<h4>Showing 45 results for <strong>{{ request.GET.search }}</strong></h4>
   	<div class="pull-right dropdown-cntnr">
   		<div class="dropdown">
 		  <button class="btn btn-default dropdown-toggle white-drop" type="button" data-toggle="dropdown"><span id="selected">Sort by:</span>
