--- a/trainer/templates/trainer/navbar.html
+++ b/trainer/templates/trainer/navbar.html
@@ -16,8 +16,9 @@
       <ul class="nav navbar-nav navbar-right navbar-menu ">
         <li>
 			<div class="form-group">
-                <form method="get" role="search" action="{% url 'trainer:index' %}">
-                    <input type="text" name="" placeholder="Search" class="form-control searchbox">
+                <form method="get " role="search" action="{% url 'trainer:listing' %}">
+                    {% csrf_token %}
+                    {{form.visible_fields.0}}
                     <span class="search-btn"><i class="icon-search"></i></span>
                 </form>
 			</div>
