--- a/trainer/templates/trainer/acct_created.html
+++ b/trainer/templates/trainer/acct_created.html
@@ -8,7 +8,7 @@
       <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
         <div class="sign-up-container">
           <h3>Congratulations!! Your account has been Created!!</h3>
-          <form method="get" action="{% url 'trainer:listing' %}">
+          <form method="get" action="{% url 'trainer:login' %}">
               {% csrf_token %}
                 <div class="text-center">
                   <button class="btn btn-message m-t-lg" type="submit">
