prefetch_selected added

--- a/trainer/templates/trainer/user_listing.html
+++ b/trainer/templates/trainer/user_listing.html
@@ -31,7 +31,7 @@
   					</td>
   					<td>
   						<div class="heading-text name-section">
-							<h3>{{profile.profile.first_name}} {{profile.profile.last_name}}</h3>
+							<h3>{{profile.user.first_name}} {{profile.user.last_name}}</h3>
 							<h5><i class="icon-person_pin_circle"></i> {{profile.country}}</h5>
 						</div>
   					</td>
