--- a/trainer/templates/trainer/navbar.html
+++ b/trainer/templates/trainer/navbar.html
@@ -27,7 +27,8 @@
         <li><a href="#"><span class="icon-notifications"><div class="badge">5</div></span></a></li>
         <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-        	<div class="user-pic" style="background: url('/media/{{user_id}}') center no-repeat;"></div>
+            <div class="user-pic" style="background: url('/static/trainer/img/user.jpg') center no-repeat;"></div>
+        	<!--<div class="user-pic" style="background: url('/media/{{user_id}}') center no-repeat;"></div>-->
         </a>
         <ul class="dropdown-menu">
             <li><a href="#">Profile</a></li>
