--- a/design/css/style.css
+++ b/design/css/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'corptrainer';
-  src:  url('fonts/corptrainer.eot?7fudny');
-  src:  url('fonts/corptrainer.eot?7fudny#iefix') format('embedded-opentype'),
-    url('fonts/corptrainer.ttf?7fudny') format('truetype'),
-    url('fonts/corptrainer.woff?7fudny') format('woff'),
-    url('fonts/corptrainer.svg?7fudny#corptrainer') format('svg');
+  src:  url('fonts/corptrainer.eot?pnubdg');
+  src:  url('fonts/corptrainer.eot?pnubdg#iefix') format('embedded-opentype'),
+    url('fonts/corptrainer.ttf?pnubdg') format('truetype'),
+    url('fonts/corptrainer.woff?pnubdg') format('woff'),
+    url('fonts/corptrainer.svg?pnubdg#corptrainer') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,6 +24,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-add:before {
+  content: "\61";
+}
+.icon-add_a_photo:before {
+  content: "\77";
+}
 .icon-photo_camera:before {
   content: "\63";
 }
@@ -32,6 +38,15 @@
 }
 .icon-chat_bubble:before {
   content: "\43";
+}
+.icon-check:before {
+  content: "\74";
+}
+.icon-mode_edit:before {
+  content: "\45";
+}
+.icon-delete:before {
+  content: "\64";
 }
 .icon-insert_invitation:before {
   content: "\78";
