--- a/trainer/templates/trainer/header.html
+++ b/trainer/templates/trainer/header.html
@@ -6,4 +6,6 @@
 <link rel="stylesheet" href="{% static 'trainer/css/bootstrap.min.css' %}">
 <link rel="stylesheet" href="{% static 'trainer/css/corporate.css' %}">
 <link rel="stylesheet" href="{% static 'trainer/css/style.css' %}">
+<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
+
