--- a/trainer/templates/trainer/navbar.html
+++ b/trainer/templates/trainer/navbar.html
@@ -8,9 +8,12 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
+      <a href="{% url 'trainer:listing' %}">
       <div class="navbar-brand logo-cntnr"><img
               src="{% static 'trainer/img/logo.png' %}"
-              class="img-responsive"></div>
+              class="img-responsive">
+      </div>
+      </a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right navbar-menu ">
