--- a/trainer/templates/trainer/detail.html
+++ b/trainer/templates/trainer/detail.html
@@ -45,7 +45,7 @@
                         </ul>
                     </div>
                 <div class="heading-text">
-                    <h3>{{profile.first_name}} {{profile.last_name}}
+                    <h3>{{profile.user.first_name}} {{profile.user.last_name}}
                         <small><i
                             class="icon-person_pin_circle"></i>
                         {{profile.country}}</small></h3>
