--- a/trainer/templates/trainer/user_listing.html
+++ b/trainer/templates/trainer/user_listing.html
@@ -5,7 +5,9 @@
 <div class="container">
   <div class="middle-section">
   <div class="search-result-header">
-  	<h4>Showing 45 results for <strong>{{ request.GET.search }}</strong></h4>
+	{% if request.GET.search %}
+	  <h4>Showing <strong>{{count}}</strong> results for <strong>{{ request.GET.search }}</strong></h4>
+	{% endif %}
   	<div class="pull-right dropdown-cntnr">
   		<div class="dropdown">
 		  <button class="btn btn-default dropdown-toggle white-drop" type="button" data-toggle="dropdown"><span id="selected">Sort by:</span>
